# explorer

./: .gitignore  README.md
explorer-exe/: Cargo.toml
explorer-exe/src/: main.rs
explorer-server/: Cargo.toml  build.rs  config.dist.toml
explorer-server/assets/: known_bugs.md
explorer-server/code/: address.js  blocks.js  coins.js  common.js  timestamps.js  txs.js
explorer-server/code/styles/: index.css
explorer-server/src/: api.rs  blockchain.rs  config.rs  db.rs  formatting.rs  grpc.rs  indexdb.rs  indexer.rs  main.rs  mocker.rs  primitives.rs  server.rs  server_error.rs  server_http.rs  server_primitives.rs  templating.rs
explorer-server/src/templating/: filters.rs
explorer-server/templates/: base.html
explorer-server/templates/components/: input.html  loader.html  loader_fullpage.html  output.html  token_info_table.html
explorer-server/templates/pages/: 404.html  address.html  block.html  blocks.html  error.html  homepage.html  transaction.html
