[package]
name = "explorer-server"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
maud = "0.22"
tonic = { version="0.3", features = ["transport", "tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"

[build-dependencies]
tonic-build = "0.3"
