[package]
name = "explorer-server"
version = "0.1.0"
authors = ["tobiasruck <ruck.tobias@gmail.com>"]
edition = "2018"

[dependencies]
bitcoin-cash = { path = "../../bitcoin-cash/bitcoin-cash" }
maud = "0.22"
tonic = { version = "0.3", features = ["transport", "tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
plain = "0.2"
sled = "0.34"
bincode = "1.3"
futures = "0.3"
num-format = "0.4"
chrono = "0.4"
chrono-humanize = "0.1.1"
base64 = "0.13"

[build-dependencies]
tonic-build = "0.3"
